--- a/src/adminPages/Products.css
+++ b/src/adminPages/Products.css
@@ -4,6 +4,7 @@
     height: 100vh;
     overflow: auto;
     margin-top: 70px;
+    position: absolute;
  }
 .products-main h3{
     padding-left: 20px;
@@ -13,7 +14,7 @@
 
  table{
      width: 90%;
-     @media screen  and (max-width:768px){
+     @media screen  and (max-width:1080px){
      
     }
 
